# fastapi-boilerplate

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT-CHECKLIST.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  docker-compose.observability.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/api/v1/: __init__.py  auth.py  health.py  items.py  metrics.py
app/core/: config.py  db.py  lifespan.py  middleware.py  ratelimit.py  startup.py
app/core/events/: bus.py  cleanup.py  dispatcher.py  worker.py
app/core/exceptions/: __init__.py  exceptions.py  handlers.py
app/core/jobs/: registry.py  worker.py
app/core/logging/: config.py  context.py  filters.py  middleware.py
app/core/metrics/: db_collector.py  instruments.py  middleware.py
app/core/security/: __init__.py  jwt.py  password.py
app/models/: __init__.py
app/models/auth/: __init__.py  associations.py  permission.py  revoked_token.py  role.py  user.py
app/models/events/: __init__.py  (+1 more)
app/repos/: base.py
app/schemas/: pagination.py
app/services/: auth.py  items.py
docs/: architecture.md  auth.md  event-bus.md  jobs.md  logging.md  metrics.md  skill.md  testing.md
observability/: prometheus.yml
sql/: apply.sh  reset.sh  schema.sql
sql/deltas/: 001_outbox_events.sql  002_handler_state.sql  003_scheduled_jobs.sql  004_revoked_tokens.sql
sql/seeds/: initial_data.sql
tests/: conftest.py
tests/functional/: test_health_endpoints.py  test_metrics_endpoint.py
tests/integration/: conftest.py  test_health_endpoints.py
tests/unit/: test_base_repo.py  test_db_pool.py  test_deps_auth.py  test_exception_handlers.py  test_json_formatter.py  test_jwt.py  test_logging_context.py  test_logging_filters.py  test_metrics_instruments.py  test_metrics_middleware.py  test_password.py  test_ratelimit.py  test_request_id_middleware.py  test_startup.py
(+42 files in other folders)
