[project]
name = "app"
version = "0.1.0"
description = "FastAPI boilerplate"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyjwt>=2.9",
    "argon2-cffi>=23.1",
    "httpx>=0.28",
    "colorlog>=6.9",
    "slowapi>=0.1",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "testcontainers[postgres]>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: tests requiring real PostgreSQL via testcontainers",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "G",    # flake8-logging-format
]
ignore = [
    "E501",   # line too long
    "N818",   # DomainException naming convention (intentional)
    "B008",   # Depends() in default args (FastAPI pattern)
    "UP046",  # Generic[] subclass style (needed for Pydantic compatibility)
    "UP047",  # Generic function style (needed for TypeVar compatibility)
    "F821",   # SQLAlchemy forward references in string annotations
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.coverage.report]
fail_under = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
